# pcg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  query-00.smt2  query-01.smt2  rust-toolchain
.cargo/: config.toml
.github/workflows/: deploy-visualization.yml  test.yml
borrowck-body-storage/: Cargo.toml
borrowck-body-storage/src/: lib.rs
pcg/: Cargo.toml
pcg-bin/: Cargo.toml  README.md
pcg-bin-utils/: Cargo.toml
pcg-bin-utils/src/: lib.rs
pcg-bin/src/: callbacks.rs  main.rs
pcg-bin/visualization/: .eslintrc.json  check-unused-tsx.sh  package-lock.json  package.json
pcg-bin/visualization/src/: api.ts  dot_graph.ts  effects.ts  script.tsx  storage.ts  types.ts  zipCache.ts
pcg-bin/visualization/src/components/: App.tsx  BasicBlockTable.tsx  FunctionSelector.tsx  MirGraph.tsx  PCGNavigator.tsx  PcgActionsDisplay.tsx  SourceCodeViewer.tsx
pcg-macros/: Cargo.toml
pcg-macros/src/: lib.rs
pcg-server/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  start-server.sh  tsconfig.json  webpack.config.js
pcg-server/src/: callbacks.rs  editor.ts  main.rs
pcg-server/static/: README.md
pcg-server/templates/: index.html
pcg-server/tests/: error_handling.rs  integration_tests.rs  upload_tests.rs
pcg-tests/: Cargo.toml
pcg-tests/src/: lib.rs
pcg-tests/tests/: aliases.rs  selected_crates.rs  test_files.rs  test_function_shape.rs  top_crates.rs  visualization.rs
pcg-tests/tests/common/: mod.rs
pcg/src/rustc_interface/: mod.rs
pcg/src/utils/: eval_stmt_data.rs  repacker.rs
pcg/tests/: selected_crates.rs
scripts/: coverage.sh
src/: action.rs  ctxt.rs  error.rs  lib.rs
src/borrow_checker/: impl.rs  mod.rs
src/borrow_pcg/: borrow_pcg_edge.rs  borrow_pcg_expansion.rs  domain.rs  edge_data.rs  has_pcs_elem.rs  mod.rs  path_condition.rs  region_projection.rs  unblock_graph.rs  validity_conditions.rs
src/borrow_pcg/abstraction/: mod.rs
src/borrow_pcg/action/: actions.rs  mod.rs
src/borrow_pcg/edge/: borrow.rs  borrow_flow.rs  conditional_lifetime_projection.rs  delegation.rs  deref.rs  kind.rs  mod.rs  outlives.rs  rawptr_deref.rs
src/borrow_pcg/graph/: aliases.rs  coupling.rs  frozen.rs  join.rs  loop_abstraction.rs  materialize.rs  mod.rs  mutate.rs
src/borrow_pcg/state/: mod.rs
src/borrow_pcg/visitor/: mod.rs
src/coupling/: coupled_edge.rs  data_source.rs  hyper_edge.rs  mod.rs  results.rs
src/loop/: loop_set.rs  mod.rs
src/owned_pcg/: mod.rs
src/owned_pcg/impl/: fpcs.rs  join_semi_lattice.rs  materialize.rs  mod.rs  node.rs  node_data.rs  traverse.rs  update.rs
src/owned_pcg/results/: repacks.rs
src/pcg/: annotations.rs  capabilities.rs  ctxt.rs  dot_graphs.rs  edge.rs  engine.rs  mod.rs  node.rs  obtain.rs  place_capabilities.rs  successor.rs  triple.rs
src/pcg/capabilities/: capability_kind.rs  mod.rs  owned.rs
src/pcg/domain/: dataflow_stmt_phase.rs  eval_stmt_phase.rs  mod.rs  pcg.rs
src/pcg/obtain/: expand.rs  mod.rs
src/pcg/owned_state/: init_capability.rs  init_tree.rs  mod.rs  state.rs
src/pcg/visitor/: assign.rs  function_call.rs  mod.rs  obtain.rs  pack.rs  stmt.rs  triple.rs  upgrade.rs
src/results/: mod.rs
src/rustc_interface/: dataflow.rs  mod.rs
src/utils/: callbacks.rs  ctxt.rs  debug.rs  display.rs  domain_data.rs  eval_stmt_data.rs  html.rs  initialized.rs  json.rs  liveness.rs  mir.rs  mod.rs  mutable.rs  place_snapshot.rs  repacker.rs  test.rs  validity.rs  visitor.rs
src/utils/place/: corrected.rs  deref_remote.rs  display.rs  expansion.rs  maybe_old.rs  maybe_remote.rs  mod.rs  ordering.rs  pcg_place.rs  place_like.rs  place_projectable.rs  remote.rs
src/visualization/: bc_facts_graph.rs  ctxt.rs  data.rs  dot_graph.rs  drawer.rs  functions_metadata.rs  graph_constructor.rs  grapher.rs  html.rs  legend.rs  mir_graph.rs  mod.rs  node.rs  settings.rs  stmt_graphs.rs
test-files/: 001_basic.rs  002_list_zero.rs  003_unnest.rs  019_lifetime_projection.rs  029_prusti_issue_25.rs  053_flowistry_time_calculation.rs  061_hashset_union.rs  066_polonius_borrow_cycle.rs  079_add_overflow.rs  083_prusti_wand.rs  089_aurel2.rs  103_function_w_reborrow.rs  105_loop.rs  106_swap.rs  116_jonas_loop.rs  117_polonius_jasper_bug.rs  118_polonius_jasper_bug_2.rs  119_oopsla_borrow_cond.rs  120_oopsla_get_nth_2.rs  130_prusti_issue_27.rs  132_oopsla_loop_fix.rs  136_prusti_move.rs  137_list_push.rs  140_loop_fix_2.rs  144_polonius_loop_live.rs  146_prusti_loop.rs  162_prop_from_field.rs  167_once_lock.rs  173_list_placeholder.rs  176_twophase_upgrade_exclusive_2.rs  178_polonius_yaml_stream_start.rs  181_oopsla_simple_borrow.rs  182_oopsla_u32_pair.rs  183_oopsla_choose.rs  185_multi_layer_loop.rs  191_oopsla_examples.rs  206_issue_77.rs  207_issue_80.rs  208_issue_91.rs  209_replace_fst.rs  (+24 more)
tests/: bench_test_files.rs  selected_crates.rs  test_files.rs  top_crates.rs
tests/common/: mod.rs
type-export/: Cargo.toml  README.md
type-export/src/: main.rs
visualization/: .gitignore  check-deprecated.sh  eslint.config.js  index.html  jest.config.js  nodemon.json  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
visualization/src/: actionFormatting.ts  api.ts  dot_graph.test.ts  dot_graph.ts  effects.ts  generated_type_deps.ts  mir_graph.ts  script.tsx  storage.ts  types.ts  util.ts
visualization/src/components/: App.tsx  AppInner.tsx  BasicBlockNode.tsx  BasicBlockTable.tsx  BorrowCheckerGraphs.tsx  Edge.tsx  LoopResults.tsx  MirGraph.tsx  NavigationItemList.tsx  PCGNavigator.tsx  PcgGraph.tsx  ReactFlowBasicBlockNode.tsx  ReactFlowEdge.tsx  Settings.tsx  SourceCodeViewer.tsx
visualization/src/generated_types/: ActionKindWithDebugInfo.ts  AppliedAction.ts  ApplyActionResult.ts  BasicBlock.ts  BorrowPcgActionKindDebugRepr.ts  BorrowPcgActionKindDiscriminants.ts  BranchChoicesDebugRepr.ts  CapabilityKind.ts  Conditioned.ts  DataflowStmtPhase.ts  DisplayOutput.ts  DotFileAtPhase.ts  (+38 more)
(+18 files in other folders)
