[package]
name = "pcg"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2024"

[features]
custom-rust-toolchain = []
visualization = []
debug_info = []
type-export = ["specta"]
default = ["visualization"]

[dependencies]
pcg-macros = { path = "pcg-macros" }
bytes = "1.11.1" # Earlier versions have security issues
bit-set = "0.8.0"
bumpalo = {version = "3.16.0", features = ["allocator_api"]}
derive_more = { version = "2.0.1", features = ["full"] }
dot = "0.1"
itertools = "0.12.0"
petgraph = "0.6.5"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = { version = "^1.11", features = ["union", "const_new"] }
specta = { git = "https://github.com/zgrannan/specta.git", features = ["derive", "export"], rev = "19d77b5d26bc1251fb3630a007290e299e825bf9", optional = true }
strum = "0.26"
strum_macros = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3.20"
union-find = "0.4"

[dev-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
toml = "0.7"
rayon = "1.8"
chrono = "0.4"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[lints.clippy]
uninlined_format_args = "deny"
derivable_impls = "deny"
str_to_string = "deny"
