[package]
name = "pcg_bin"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2024"

[dependencies]
pcg = { path = "..", features = ["visualization", "coupling"] }
shell-escape = "0.1.5"
tracing = "0.1"
tracing-subscriber = "0.3.20"
rustversion = "1.0"

[package.metadata.rust-analyzer]
rustc_private = true

