[package]
name = "pcg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pcg-bin-utils = { path = "../pcg-bin-utils" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
hyper = { version = "1.0", features = ["full"] }

[dev-dependencies]
pcg-bin-utils = { path = "../pcg-bin-utils" }
reqwest = { version = "0.12", features = ["multipart", "blocking"] }
tempfile = "3.9"
