[package]
name = "pcg-tests"
version = "0.1.0"
authors = ["Prusti Devs <prusti_developers@sympa.ethz.ch>"]
edition = "2024"

[dependencies]
pcg = { path = "..", features = ["visualization", "coupling"] }
borrowck-body-storage = { path = "../borrowck-body-storage" }
chrono = "0.4"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.12.0"
rayon = "1.8"
reqwest = { version = "^0.11", features = ["blocking"] }
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.20"
toml = "0.7"

[package.metadata.rust-analyzer]
rustc_private = true

