[package]
name = "type-export"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate_types"
path = "src/main.rs"

[dependencies]
pcg = { path = "..", features = ["type-export"] }
specta = { git = "https://github.com/zgrannan/specta.git", features = ["derive", "export"], rev = "19d77b5d26bc1251fb3630a007290e299e825bf9"}
specta-typescript = { git = "https://github.com/zgrannan/specta.git", rev = "19d77b5d26bc1251fb3630a007290e299e825bf9"}

[package.metadata.rust-analyzer]
rustc_private = true

